@@ -1,3 +1,6 @@
+2012-1-x
+Revised the kbest loading in learn/oracle/mert/convex_hull code
+
 2012-12-29
 INCOMPATIBLE: The bleuS metric is completely a sentence-wise metric, and document-wise scoring is performed by
 	      simple averaging.
